Working_examples/Killercoda/Testing_deployments/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/service1"
                    route:
                      cluster: service1
                      prefix_rewrite: "/"
                  - match:
                      prefix: "/service2"
                    route:
                      cluster: service2
                      prefix_rewrite: "/"
                  - match:
                      prefix: "/service3"
                    route:
                      cluster: service3
                      prefix_rewrite: "/"
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
      - name: service1
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: service1
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: service1
                    port_value: 80
      - name: service2
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: service2
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: service2
                    port_value: 80
      - name: service3
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: service3
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: service3
                    port_value: 80

    admin:
      access_log_path: "/tmp/admin_access.log"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
