Working_examples/Killercoda/Testing_deployments/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.27.0
        ports:
        - containerPort: 10000
        - containerPort: 9901
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
          readOnly: true
        command: ["envoy", "-c", "/etc/envoy/envoy.yaml", "--log-level", "debug"]
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
